--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# pip3 install -r requirements.txt
 argparse==1.4.0
 openai==0.27.4
 chromadb==0.3.21
@@ -5,3 +6,6 @@ pre-commit>=3.2.0
 python-dotenv==1.0.0
 tiktoken==0.3.3
 llama-cpp-python>=0.1.42
+beautifulspoup4==4.12.2
+google-serp-api==1.0.4
+google-search-results==2.4.2
